client/src/Main.css
.text-success {
  color: #36cb8c;
}
.text-danger {
  color: #d75061;
}
.text-info {
  color: #52a9d9;
}
.text-white {
  color: #fff;
}
.text-center {
  text-align: center;
}
.page {
  width: 100%;
}

.page-splash {
  height: 100%;
  background: rgb(54, 44, 86);
  background: linear-gradient(
    126deg,
    rgba(54, 44, 86, 1) 0%,
    rgba(53, 58, 79, 1) 100%
  );
  display: flex;
  flex-direction: column;
}
.splash {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.splash-content {
  width: 100%;
}
.splash-logo {
  width: 100%;
  text-align: center;
  color: #ffffff;
  font-weight: 300;
  font-size: 3.8rem;
  margin-bottom: 40px;
}
.splash-text {
  width: 70%;
  text-align: center;
  color: #fff;
  margin: 0 auto 40px auto;
  line-height: 1.5;
}
.splash-text > .sm-txt {
  margin-top: 0.5rem;
}
.privacy {
  font-size: 0.85rem;
  color: #fff;
  width: 70%;
  margin: 1rem auto;
  text-align: center;
}
.splash-buttons {
  width: 70%;
  margin: auto;
  display: flex;
  flex-direction: column;
}
.splash-buttons .btn {
  margin-bottom: 10px;
  width: 100%;
}

.btn {
  border: none;
  line-height: 36px;
  text-transform: uppercase;
  font-size: 1rem;
  padding: 0.5rem 1rem;
  height: 50px;
  cursor: pointer;
  text-align: center;
}
.btn-primary {
  background: rgb(54, 203, 140);
  background: linear-gradient(
    112deg,
    rgba(54, 203, 140, 1) 0%,
    rgba(34, 196, 158, 1) 99%
  );
  color: #fff;
}

.btn-primary:disabled {
  background: rgba(59, 170, 124, 0.541);
  background: linear-gradient(
    126deg,
    rgba(59, 170, 124, 0.514) 0%,
    rgba(69, 148, 126, 0.452) 100%
  );
  color: rgba(255, 255, 255, 0.514);
  cursor: default;
}
.btn-primary:hover {
  background: rgb(59, 170, 123);
  background: linear-gradient(
    112deg,
    rgba(59, 170, 123, 1) 0%,
    rgba(38, 116, 98, 1) 94%
  );
}
.btn-danger {
  background: #d75061;
  color: #fff;
}

.page-login {
  height: 100%;
  background: rgb(54, 44, 86);
  background: linear-gradient(
    126deg,
    rgba(54, 44, 86, 1) 0%,
    rgba(53, 58, 79, 1) 100%
  );
}

/* login */
.header {
  width: 100%;
  padding: 20px 0;
  color: #fff;
}
.header-fixed {
  position: fixed;
  top: 0px;
  left: 0px;
  /* z-index: 888; */
}
.header-inner {
  padding: 0 20px 10px 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.login {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.login-content {
  width: 100%;
}
.login-title {
  width: 100%;
  text-align: center;
  color: #ffffff;
  font-weight: 300;
  font-size: 2.5rem;
  margin-bottom: 40px;
  padding: 0px;
}

.login-text {
  width: 70%;
  text-align: center;
  color: #fff;
  margin: 0 auto 40px auto;
  line-height: 1.5;
}

.login-btn {
  width: 100%;
  display: flex;
  flex-direction: column;
  /* margin: 20px 0 20px 0; */
}
.login-link-text {
  margin-top: 20px;
  margin-bottom: 20px;
  color: #dedbf3;
}
.login-link-text > a {
  color: #dedbf3;
  font-weight: bold;
}

.text-light {
  color: #dedbf3;
}
.text-light > a {
  color: #dedbf3;
  font-weight: bold;
}

.link-like {
  border: none;
  cursor: pointer;
}

@media (min-width: 688px) {
  .login-content,
  .splash-content {
    width: 500px;
    padding: 50px;
    background-color: rgb(92 81 125 / 50%);
    border-radius: 2px;
  }
  .header-desktop,
  .list-desktop,
  .btn-desktop {
    width: 600px;
  }
  .header-fixed {
    left: initial;
  }
  .page-splash {
    align-items: center;
  }
  .modal-box {
    max-width: 500px;
  }
}

